<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox_id"
            android:title="@string/inbox"
            android:icon="@drawable/inboxarrowdown" />

        <item
            android:id="@+id/starred_id"
            android:title="@string/starred"
            android:icon="@drawable/starred" />

        <item
            android:id="@+id/sent_id"
            android:title="@string/sent"
            android:icon="@drawable/send" />

        <item
            android:id="@+id/drafts_id"
            android:title="@string/drafts"
            android:icon="@drawable/emailopen" />

    </group>

    <item android:title="@string/subheader">

        <menu>
            <item
                android:title="@string/all_mail"
                android:icon="@drawable/email"
                android:id="@+id/allmail_id" />

            <item
                android:id="@+id/trash_id"
                android:title="@string/trash"
                android:icon="@drawable/trash" />

            <item
                android:id="@+id/spam_id"
                android:title="@string/spam"
                android:icon="@drawable/spam" />

        </menu>

    </item>

</menu>